// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with inValid prop 1`] = `
<select
  className="sc-jDwBTQ cudbNf"
/>
`;

exports[`renders correctly with no props 1`] = `
<select
  className="sc-jDwBTQ gOnHZx"
/>
`;

exports[`renders correctly with noBg prop 1`] = `
<select
  className="sc-jDwBTQ hQuQSp"
/>
`;

exports[`renders correctly with valid prop 1`] = `
<select
  className="sc-jDwBTQ fxrJcM"
/>
`;
